# project-Fastapi

./: README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 13d511b20195_updated_phone_number.py  b36576ba07ec_add_name.py  d7afa16f40dc_create_database_models.py
app/: database.py  main.py  models.py  oauth2.py  requirements.txt  schema.py  services.py
app/routers/: auth.py  post.py  user.py
